[tool.poetry]
name = "pysweeper"
version = "0.1.0"
description = "CLI-based Minesweeper game, written in Python"
authors = ["whege"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
